
2.00     NOT YET RELEASED
          - changed internal storage format to json everywhere
          - improved memory usage
          - improved startup time
          - improved page rendering
          - users can change their htpasswd passwords
          - fix redirect without trailing slash on login
          - fix event log filter for unprivileged contacts (#406)

          Incompatible Changes:
          - custom thruk plugins have to be adopted to thruk 2, see migration
            help document: http://thruk.org/documentation/thruk_2_0_migration_guide.html
          - enable frame mode by default

1.88-4   Wed Apr 22 16:16:09 CEST 2015
          - Config Tool:
            - fix editing objects
            - add tools to semi-automatically clean configs from common flaws
          - Panorama View:
            - fix scaling and setting offsets for background

1.88-3   Sat Apr 18 11:44:40 CEST 2015
          - mongodb logcache is now deprecated and will be removed 2016
          - add pnp graph select option on extinfo pages
          - fix error on omd updates with recurring downtimes
          - fix permission problem with service recurring downtimes
          - Business Process:
            - fix business process cron entry being remove when updating reports
          - Reports:
            - display error message if report cannot be created due to missing hosts/services
            - fix problem for reports using contacts with authorized by groups
          - Panorama View:
            - fix adding new connector items
            - fix text labels disappearing on unlock
            - fix ghost items from other dashboards when using geomap
          - Config Tool:
            - use maximum size in command line wizard
            - list references directly on the object page
            - display files/folders in Objects Browser
            - objects will be cloned including references now
            - fix object browser links